# magnetic_compensation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: system.drawio
doc/html/: 3rd__party_2kf-gins_2_c_make_files_2kf-gins_8dir_2link_8txt.html  3rd__party_2kf-gins_2_c_make_lists_8txt.html  3rd__party_2tolles-lawson_2_c_make_files_2tolles-lawson_8dir_2link_8txt.html  3rd__party_2tolles-lawson_2_c_make_lists_8txt.html  _2home_2sun_2magnetic_compensation_23rd_party_2eigen-3_83_89_2unsupported_2_eigen_2_c_x_x11_2src0dc11cd1f63d83329794e275b6d0f33f.html  _a_v_x512_2_packet_math_8h.html  _a_v_x512_2_packet_math_8h.js  _a_v_x512_2_packet_math_8h_source.html  _a_v_x_2_complex_8h.html  _a_v_x_2_complex_8h.js  _a_v_x_2_complex_8h_source.html  _a_v_x_2_packet_math_8h.html  _a_v_x_2_packet_math_8h.js  _a_v_x_2_packet_math_8h_source.html  _a_v_x_2_type_casting_8h.html  _a_v_x_2_type_casting_8h.js  _a_v_x_2_type_casting_8h_source.html  _aligned_box_8h.html  _aligned_box_8h.js  _aligned_box_8h_source.html  _alti_vec_2_complex_8h.html  _alti_vec_2_complex_8h.js  _alti_vec_2_complex_8h_source.html  _alti_vec_2_packet_math_8h.html  _alti_vec_2_packet_math_8h.js  _alti_vec_2_packet_math_8h_source.html  _ambi_vector_8h.html  _ambi_vector_8h_source.html  _amd_8h.html  _amd_8h.js  _amd_8h__incl.map  _amd_8h__incl.md5  _amd_8h_source.html  _angle_axis_8h.html  _angle_axis_8h.js  _angle_axis_8h_source.html  _arpack_self_adjoint_eigen_solver_8h.html  _arpack_self_adjoint_eigen_solver_8h.js  _arpack_self_adjoint_eigen_solver_8h__incl.map  _arpack_self_adjoint_eigen_solver_8h__incl.md5  (+16763 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  (+216 more)
doc/latex/: 3rd__party_2kf-gins_2_c_make_files_2kf-gins_8dir_2link_8txt.tex  3rd__party_2kf-gins_2_c_make_lists_8txt.tex  3rd__party_2tolles-lawson_2_c_make_files_2tolles-lawson_8dir_2link_8txt.tex  3rd__party_2tolles-lawson_2_c_make_lists_8txt.tex  _2home_2sun_2magnetic_compensation_23rd_party_2eigen-3_83_89_2unsupported_2_eigen_2_c_x_x11_2src0dc11cd1f63d83329794e275b6d0f33f.tex  _a_v_x512_2_packet_math_8h.tex  _a_v_x_2_complex_8h.tex  _a_v_x_2_packet_math_8h.tex  _a_v_x_2_type_casting_8h.tex  _aligned_box_8h.tex  _alti_vec_2_complex_8h.tex  _alti_vec_2_packet_math_8h.tex  _ambi_vector_8h.tex  _amd_8h.tex  _amd_8h__incl.md5  _angle_axis_8h.tex  _arpack_self_adjoint_eigen_solver_8h.tex  _arpack_self_adjoint_eigen_solver_8h__incl.md5  _array_8h.tex  _array_base_8h.tex  _array_base_8h__incl.md5  _array_cwise_binary_ops_8h.tex  _array_cwise_binary_ops_8h__dep__incl.md5  _array_cwise_unary_ops_8h.tex  _array_cwise_unary_ops_8h__dep__incl.md5  _array_wrapper_8h.tex  _assign_8h.tex  _assign___m_k_l_8h.tex  _assign_evaluator_8h.tex  _assignment_functors_8h.tex  _auto_diff_jacobian_8h.tex  _auto_diff_scalar_8h.tex  _auto_diff_vector_8h.tex  _b_d_c_s_v_d_8h.tex  _b_v_algorithms_8h.tex  _band_matrix_8h.tex  _basic_preconditioners_8h.tex  _bi_c_g_s_t_a_b_8h.tex  _binary_functors_8h.tex  _blas_util_8h.tex  (+4857 more)
etc/: config_calibration.json  config_compensation.json  default_config.json
include/api/: mag_base.h  mic_base.h  mic_compensation_api.h
include/common/: mag_config.h  mag_logger.h  mag_prerequisite.h  mag_utils.h  mic_config.h  mic_logger.h  mic_prerequisite.h  mic_utils.h
include/data_storer/: mag_data_storer.h  mic_data_storer.h
include/data_storer/impl/: mic_data_storer_impl.hpp
include/fileio/: fileio.h
include/mag_compensator/: mag_compensator.h
include/mag_compensator/obeserver/: mag_state_logger.h
include/mag_ins/: mag_ins.h
include/mag_ins/impl/: mag_kf_gins.h
include/mic_compensator/: mic_compensator.h
include/mic_compensator/obeserver/: mic_state_logger.h
include/mic_ins/: mic_ins.h
include/mic_ins/impl/: mic_kf_gins.h
include/mic_mag_compensator/: mic_mag_compensator.h
include/mic_mag_compensator/impl/: mic_cabin_mag_compensator.h  mic_cabin_nav_mag_compensator.h  mic_ellipsoid_mag_compensator.h  mic_tl_component_mag_compensator.h  mic_tl_mag_compensator.h
include/mic_mag_compensator/obeserver/: mic_state_evaluator.h  mic_state_logger.h
include/mic_nav_state_estimator/: mic_nav_state_estimator.h
include/mic_nav_state_estimator/impl/: mic_kf_gins.h  mic_kf_ins_estimator.h
install/etc/: default_config.json
models/: mic_model.mdl  mic_model_0814.mdl
scripts/: build.sh  make_sdk.sh  set_env.sh
sdk/: CMakeLists.txt  mic_test.cc
src/api/: mic_compensation_api.cc
src/common/: mag_config.cc  mag_logger.cc  mic_config.cc  mic_logger.cc
src/mag_compensator/: mag_compensator.cc
src/mag_compensator/observer/: mag_state_logger.cc
src/mag_ins/: mag_ins.cc
src/mag_ins/impl/: mag_kf_gins.cc
src/mic_compensator/: mic_compensator.cc
src/mic_compensator/observer/: mic_state_logger.cc
src/mic_ins/: mic_ins.cc
src/mic_ins/impl/: mic_kf_gins.cc
src/mic_mag_compensator/: mic_mag_compensator.cc
src/mic_mag_compensator/impl/: mic_cabin_mag_compensator.cc  mic_cabin_nav_mag_compensator.cc  mic_ellipsoid_mag_compensator.cc  mic_tl_component_mag_compensator.cc  mic_tl_mag_compensator.cc
src/mic_mag_compensator/observer/: mic_state_evaluator.cc  mic_state_logger.cc
src/mic_nav_state_estimator/: mic_nav_state_estimator.cc
src/mic_nav_state_estimator/impl/: mic_kf_gins.cc  mic_kf_ins_estimator.cc
test/: calibrate.cc  compensate.cc  test.cc
